--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <section class="footer-section">
             <div class="link-section">
                 <h3 class="section-title">Lets Connect</h3>
-                <p class="short-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday</p>
+                <p class="short-description">Please fill out the form right now on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday</p>
                 <div class="social-links">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
